--- a/index.html
+++ b/index.html
@@ -4,39 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/estilos.css">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/estilos.css">
 <style>
-nav {
-  background-color: black;
-  overflow: hidden;
-}
-
-nav img {
-  float: left;
-  padding: 14px 16px;
-}
-
-nav img:hover {
-  background-color: #ddd;   
-}
-
-nav img.active {
-  background-color: #4CAF50;
-}
 </style>
 </head>
 <body>
-    <nav>
-        <ul>
-          <li><a href="#"><i class="fa fa-home"></i> Inicio</a></li>
-          <li><a href="#"><i class="fa fa-info-circle"></i> Acerca de</a></li>
-          <li><a href="#"><i class="fa fa-envelope"></i> Contacto</a></li>
-          <li><a href="#"><i class="fa fa-user"></i> Perfil</a></li>
-        </ul>
-      </nav>
-      
-
+<nav>
+  <a class="active" href="#home">Inicio</a>
+  <a href="./view/Estudios.html">Estudios</a>
+  <a href="#contact">Contacto</a>
+  <a href="#about">Sobre mi</a>
+</nav>
+<img class="Entrada" src="./img/descarga.jpeg" alt="Imagen principal">
+<h1 class="Entrada">Mi Título</h1>
 </body>
 </html>
-
