--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
 <body>
 <nav>
-  <a class="active" href="#home">Inicio</a>
+  <a class="active" href="./index.html">Inicio</a>
   <a href="./view/Estudios.html">Estudios</a>
-  <a href="#contact">Contacto</a>
-  <a href="#about">Sobre mi</a>
+  <a href="./view/Contacto.html">Contacto</a>
+  <a href="./view/Sobre mi.html">Sobre mi</a>
 </nav>
 <img class="Entrada" src="./img/descarga.jpeg" alt="Imagen principal">
 <h1 class="Entrada">Mi Título</h1>
