--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
   <a class="active" href="./index.html">Inicio</a>
   <a href="./view/Estudios.html">Estudios</a>
   <a href="./view/Contacto.html">Contacto</a>
-  <a href="./view/Sobre mi.html">Sobre mi</a>
+  <a href= ./view/Experiencia.html>Sobre mi</a>
 </nav>
-<img class="Entrada" src="./img/descarga.jpeg" alt="Imagen principal">
-<h1 class="Entrada">Mi Título</h1>
 </body>
 </html>
